codex-rs/tui/src/history_cell/snapshots/codex_tui__history_cell__tests__mcp_tools_output_lists_tools_for_hyphenated_server_names.snap
---
source: tui/src/history_cell.rs
assertion_line: 3310
expression: rendered
---
/mcp

🔌  MCP 工具

  • some-server
    • 状态：已启用
    • 认证：不支持
    • 命令：docs-server --stdio
    • 工具：lookup
    • 资源：（无）
    • 资源模板：（无）
