codex-rs/tui/src/history_cell/snapshots/codex_tui__history_cell__tests__multiline_command_both_lines_wrap_with_correct_prefixes.snap
---
source: tui/src/history_cell.rs
expression: rendered
---
• 已运行 first_token_is_long_en
  │ ough_to_wrap
  │ second_token_is_also_lon
  │ … 另有 1 行
  └ （无输出）
