codex-rs/tui/src/history_cell/snapshots/codex_tui__history_cell__tests__ran_cell_multiline_with_stderr_snapshot.snap
---
source: tui/src/history_cell.rs
expression: rendered
---
• 已运行 echo
  │ this_is_a_very_long_si
  │ ngle_token_that_will_w
  │ … 另有 2 行
  └ error: first line on
    stderr
    error: second line on
    stderr
